--- a/deploy/action.yml
+++ b/deploy/action.yml
@@ -1,25 +1,34 @@
 name: Send Deploy Event to Okay
 on:
-  workflow_dispatch:
+  workflow_call:
     inputs:
       sha:
-        description: 'Deployed Commit SHA'
+        description: 'Deployed commit sha'
         required: true
       environment:
-        description: 'The target environment of the Deploy'
-        required: false
-      repo:
-        description: 'The source repo deployed'
-        required: false
+        description: 'The target environment of the Deploy (e.g. staging, production)'
+        required: true
+      repository:
+        description: 'The source repository deployed'
+        required: true
+      organization:
+        description: 'The organization the repository belongs to'
+        required: true
       service:
         description: 'The target service deployed'
         required: false
+      url:
+        description: 'Url to get more information on the deployment'
+        required: false
+    secrets:
+      OKAY_API_TOKEN:
+        required: true
 jobs:
-  Okay-Send-Deploy-Webhook:
+  okay-send-deploy-webhook:
     runs-on: ubuntu-latest
     steps:
     - name: Send Okay Webhook
       env:
         OKAY_API_TOKEN: ${{ secrets.OKAY_API_TOKEN }}
       run: |
-        curl -X POST -H "Authorization: Bearer $OKAY_API_TOKEN" -H 'Content-Type: application/json' --data "{\"event\": \"deploy\", \"timestamp\": \"$(date +%Y-%m-%dT%H:%M:%S%z)\", \"properties\": {\"sha\": \"${{ github.event.inputs.sha }}\", \"environment\": \"${{ github.event.inputs.env }}\", \"repo\": \"${{ github.event.inputs.repo }}\", \"service\": \"${{ github.event.inputs.service }}\"}}" https://app.okayhq.com/api/webhooks/events
+        curl -X POST -H "Authorization: Bearer $OKAY_API_TOKEN" -H 'Content-Type: application/json' --data "{\"version\": \"1\", \"event\": \"deploy\", \"timestamp\": \"$(date +%Y-%m-%dT%H:%M:%S%z)\", \"properties\": {\"sourceControl\": \"github\", \"sha\": \"${{ inputs.sha }}\", \"environment\": \"${{ inputs.environment }}\", \"repository\": \"$(cut -d'/' -f2 <<<'${{ inputs.repository }}')\", \"service\": \"${{ inputs.service }}\", \"organization\": \"${{ inputs.organization }}\", \"url\": \"${{ inputs.url }}\"}}" https://app.okayhq.com/api/events/v1
