--- a/.github/workflows/custom-event-action.yml
+++ b/.github/workflows/custom-event-action.yml
@@ -11,23 +11,20 @@ on:
       user:
         description: 'The github login of the person'
         required: false
-      metric1_name:
-        description: 'The name of a latency metric (A) (e.g lead time)'
-        required: false
       metric1_duration_ms:
-        description: 'How long something (A) took in milliseconds'
-        required: false
-      metric2_name:
-        description: 'The name of a number metric (B) (e.g. percent build failures today)'
+        description: 'How long something took in milliseconds (e.g. lead time)'
         required: false
       metric2_number:
-        description: 'The value of B'
-        required: false
-      metric3_name:
-        description: 'The name of a count metric (C) (e.g. number of incidents)'
+        description: 'The value of a number metric (e.g. percent build failures today)'
         required: false
       metric3_count:
-        description: 'Number of times something (C) happened'
+        description: 'Number of times something happened (e.g. number of incidents)'
+        required: false
+      label:
+        description: 'Optional label to add to the event'
+        required: false
+      url:
+        description: 'URL to get more information about the event'
         required: false
 jobs:
   okay-send-custom-event-webhook:
@@ -37,4 +34,4 @@ jobs:
       env:
         OKAY_API_TOKEN: ${{ secrets.OKAY_API_TOKEN }}
       run: |
-        curl -X POST -H "Authorization: Bearer $OKAY_API_TOKEN" -H 'Content-Type: application/json' --data "{\"event\": \"custom\",  \"uniqueKey\": [\"event_unique_id\"], \"customEventName\": \"${{ inputs.event }}\", \"timestamp\": \"$(date +%Y-%m-%dT%H:%M:%S%z)\", \"identity\": {\"user\": \"${{ inputs.user }}\", \"type\": \"sourceControlLogin\"}, \"properties\": {\"event_unique_id\": \"${{ inputs.event_unique_id }}\", \"${{ inputs.metric1_name }}\": {\"type\": \"durationMs\", \"value\": ${{ inputs.metric1_duration_ms }}}, \"${{ inputs.metric2_name }}\": {\"type\": \"number\", \"value\": ${{ inputs.metric2_number }}}, \"${{ inputs.metric3_name }}\": {\"type\": \"count\", \"value\": ${{ inputs.metric3_count }}} }}" https://app.okayhq.com/api/events/v1
+        curl -X POST -H "Authorization: Bearer $OKAY_API_TOKEN" -H 'Content-Type: application/json' --data "{\"event\": \"custom\",  \"uniqueKey\": [\"event_unique_id\"], \"customEventName\": \"${{ inputs.event }}\", \"timestamp\": \"$(date +%Y-%m-%dT%H:%M:%S%z)\", \"identity\": {\"user\": \"${{ inputs.user }}\", \"type\": \"sourceControlLogin\"},\"labels\":[ \"${{ inputs.label }}\" ], \"properties\": {\"event_unique_id\": \"${{ inputs.event_unique_id }}\", \"okay.url\": \"${{ inputs.url }}\", \"test.duration_ms_metric\": {\"type\": \"durationMs\", \"value\": ${{ inputs.metric1_duration_ms }}}, \"test.number_metric\": {\"type\": \"number\", \"value\": ${{ inputs.metric2_number }}}, \"test.count_metric\": {\"type\": \"count\", \"value\": ${{ inputs.metric3_count }}} }}" https://app.okayhq.com/api/events/v1
